--- a/public/style.css
+++ b/public/style.css
@@ -11,6 +11,16 @@ body {
     padding-bottom: 20px;
 }
 
+.fullscreen-bg {
+    position: fixed;
+    top: 80px;
+    right: 0;
+    bottom: 80px;
+    left: 0;
+    overflow: hidden;
+    z-index: -100;
+}
+
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .content,
